<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:src="@drawable/dominionlogo"
        android:layout_marginBottom="40dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/log_game_string"
        android:id="@+id/logGame"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:onClick="loadLogGameActivity" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/add_player_string"
        android:id="@+id/addPlayer"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:onClick="loadAddPlayerActivity" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/view_stats_string"
        android:id="@+id/viewStats"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:onClick="loadPlayerListActivity" />

</LinearLayout>
